Preprocessing pipeline and train-test data split

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8ed26955-fcb6-44dd-b324-7ff46d872d29",
    "metadata": {
     "scrolled": true
@@ -210,7 +210,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a739e6d9-1427-4cb3-8afc-ec74e904cfa0",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,8 +254,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "01678755-2d66-4092-ad4d-eef4ca35aeea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"target_binary\"] = df[\"target\"].map({1: 0, 2: 1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d1f21e0f-cc3a-4ae8-b838-02531e24972a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>target_binary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   target  target_binary\n",
+       "0       1              0\n",
+       "1       2              1\n",
+       "2       1              0\n",
+       "3       1              0\n",
+       "4       2              1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"target\", \"target_binary\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "85fcd5de-401f-4377-a6b0-95acb253bf26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1000, 20), (1000,))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = df.drop(columns=[\"target\", \"target_binary\"])\n",
+    "y = df[\"target_binary\"]\n",
+    "\n",
+    "X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2e3a73e8-8658-4ace-b3d7-202382b0494d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pt/w30j5vtd1qj0nfnj2n1869hw0000gn/T/ipykernel_49004/1006655460.py:1: Pandas4Warning: For backward compatibility, 'str' dtypes are included by select_dtypes when 'object' dtype is specified. This behavior is deprecated and will be removed in a future version. Explicitly pass 'str' to `include` to select them, or to `exclude` to remove them and silence this warning.\n",
+      "See https://pandas.pydata.org/docs/user_guide/migration-3-strings.html#string-migration-select-dtypes for details on how to write code that works with pandas 2 and 3.\n",
+      "  cat_cols = X.select_dtypes(include=\"object\").columns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(Index(['status', 'credit_history', 'purpose', 'savings', 'employment',\n",
+       "        'personal_status', 'guarantors', 'property', 'other_installment',\n",
+       "        'housing', 'job', 'phone', 'foreign_worker'],\n",
+       "       dtype='str'),\n",
+       " Index(['duration', 'amount', 'installment_rate', 'residence', 'age', 'credits',\n",
+       "        'dependents'],\n",
+       "       dtype='str'))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_cols = X.select_dtypes(include=\"object\").columns\n",
+    "num_cols = X.select_dtypes(exclude=\"object\").columns\n",
+    "\n",
+    "cat_cols, num_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cf055741-c52d-4347-b490-a606c51faa93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "23ab5a42-5f92-4985-a949-0ede0a70b2d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"num\", StandardScaler(), num_cols),\n",
+    "        (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), cat_cols)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "19551b8a-95df-4a32-b432-5ce34c35676c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((800, 20), (200, 20))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    stratify=y\n",
+    ")\n",
+    "\n",
+    "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "301cc786-f136-4958-92a0-e22cbc5f5669",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((800, 61), (200, 61))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_processed = preprocessor.fit_transform(X_train)\n",
+    "X_test_processed = preprocessor.transform(X_test)\n",
+    "\n",
+    "X_train_processed.shape, X_test_processed.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2222e585-12c5-4e35-9810-5bb323f77064",
    "metadata": {},
    "outputs": [],
    "source": []
